Closed Bug 1725126 Opened 4 years ago Closed 4 years ago

Intermittent Perma [Tier 2 ] /builds/worker/checkouts/gecko/widget/gtk/nsWindow.cpp:2255:18: error: use of undeclared identifier 'PopupAlignmentToGdkGravity'

Categories

(Firefox Build System :: General, defect, P5)

defect

Tracking

(firefox-esr78 unaffected, firefox-esr91 unaffected, firefox91 unaffected, firefox92 unaffected, firefox93 fixed)

RESOLVED FIXED
93 Branch
Tracking Status
firefox-esr78 --- unaffected
firefox-esr91 --- unaffected
firefox91 --- unaffected
firefox92 --- unaffected
firefox93 --- fixed

People

(Reporter: intermittent-bug-filer, Assigned: stransky)

References

(Regression)

Details

(Keywords: intermittent-failure, regression)

Attachments

(1 file)

Filed by: ccozmuta [at] mozilla.com
Parsed log: https://treeherder.mozilla.org/logviewer?job_id=348066518&repo=autoland
Full log: https://firefox-ci-tc.services.mozilla.com/api/queue/v1/task/UQutMSUpT8qqVwbgIDDZOw/runs/0/artifacts/public/logs/live_backing.log


[task 2021-08-11T08:46:37.132Z] 08:46:37    ERROR -  /builds/worker/checkouts/gecko/widget/gtk/nsWindow.cpp:2255:18: error: use of undeclared identifier 'PopupAlignmentToGdkGravity'
[task 2021-08-11T08:46:37.132Z] 08:46:37     INFO -      rectAnchor = PopupAlignmentToGdkGravity(popupFrame->GetPopupAnchor());
[task 2021-08-11T08:46:37.132Z] 08:46:37     INFO -                   ^
[task 2021-08-11T08:46:37.132Z] 08:46:37    ERROR -  /builds/worker/checkouts/gecko/widget/gtk/nsWindow.cpp:2256:18: error: use of undeclared identifier 'PopupAlignmentToGdkGravity'
[task 2021-08-11T08:46:37.132Z] 08:46:37     INFO -      menuAnchor = PopupAlignmentToGdkGravity(popupFrame->GetPopupAlignment());
[task 2021-08-11T08:46:37.133Z] 08:46:37     INFO -                   ^
[task 2021-08-11T08:46:37.133Z] 08:46:37     INFO -  2 errors generated.
[task 2021-08-11T08:46:37.133Z] 08:46:37    ERROR -  make[4]: *** [/builds/worker/checkouts/gecko/config/rules.mk:693: nsWindow.o] Error 1
[task 2021-08-11T08:46:37.133Z] 08:46:37     INFO -  make[4]: Leaving directory '/builds/worker/workspace/obj-build/widget/gtk'
[task 2021-08-11T08:46:37.133Z] 08:46:37     INFO -  make[4]: *** Waiting for unfinished jobs....
Flags: needinfo?(stransky)

Will fix that, Thanks.

Assignee: nobody → stransky
Flags: needinfo?(stransky)
Pushed by stransky@redhat.com: https://hg.mozilla.org/integration/autoland/rev/b81c94ecb234 [Linux] Build PopupAlignmentToGdkGravity(), r=emilio
Status: NEW → RESOLVED
Closed: 4 years ago
Resolution: --- → FIXED
Target Milestone: --- → 93 Branch

Set release status flags based on info from the regressing bug 1718727

Has Regression Range: --- → yes
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: