Bug 1725126 [Linux] Build PopupAlignmentToGdkGravity(), r=emilio

Differential Revision: https://phabricator.services.mozilla.com/D122331